testdata/rules-tests/bad/AG-021-v1-rust-todo-auth.rs
fn validate_user(token: &str) -> Result<User, AuthError> {
    todo!()
}
